<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.musicplus.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_RegisterFragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/register_title"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_RegisterFragment_back"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@mipmap/ic_back"
        app:layout_constraintTop_toTopOf="@id/tv_RegisterFragment_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_RegisterFragment_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_RegisterFragment_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_phoneNumber"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:layout_marginStart="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_RegisterFragment_title"/>

    <EditText
        android:id="@+id/edt_RegisterFragment_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/register_hint_phoneNumber"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_RegisterFragment_phoneNumber"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_RegisterFragment_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:layout_marginStart="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_RegisterFragment_phoneNumber"/>

    <EditText
        android:id="@+id/edt_RegisterFragment_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/register_hint_password"
        android:maxLength="30"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_RegisterFragment_password"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_RegisterFragment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:layout_marginStart="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_RegisterFragment_password"/>

    <EditText
        android:id="@+id/edt_RegisterFragment_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/register_hint_username"
        android:maxLength="30"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_RegisterFragment_username"
        app:layout_goneMarginStart="10sp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_RegisterFragment_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_code"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@+id/edt_RegisterFragment_username"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_RegisterFragment_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="100sp"
        android:hint="@string/register_hint_code"
        android:maxLength="6"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RegisterFragment_code"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_RegisterFragment_getCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/register_getCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RegisterFragment_code" />

    <Button
        android:id="@+id/btn_RegisterFragment_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_RegisterFragment_code"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>